...
      <Button
        variant="elevated"
        onPress={onPress}
        disabled={disabled}
        width="100%"
        color="$primary"
        testID="sign-in-google-button"
      >
        {t("signIn.googleButton")}
      </Button>
    );
  });

...
